fixed the issues with github pages not showing elements

--- a/src/css/SectionAddTaskButton.css
+++ b/src/css/SectionAddTaskButton.css
@@ -7,15 +7,15 @@
     border: none;
     outline: none;
     background: #e9e9e9;
-    opacity: 80%;
+    opacity: .8;
     margin-left: 4vw;}
 
 .add-task-button:focus{
-    opacity: 100%;
+    opacity: 1;
 }
 
 .add-task-button:hover{
-    opacity: 100%;
+    opacity: 1;
 }
 
 
@@ -31,7 +31,7 @@
         outline: none;
         background: #e9e9e9;
         margin-left: 5vh;
-        opacity: 80%;
+        opacity: .8;
     }
 
 }
